feat[BACK-FRONT] Configuracion para despliegue